[tool.poetry]
name = "Alchemy"
version = "0.5.0"
description = "Program for chemical calculations"
authors = ["Cewerty"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
matplotlib = "^3.8.2"
typer = {extras = ["all"], version = "^0.9.0"}
translate = "^3.6.1"
chempy = "^0.8.3"
mendeleev = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
